--- a/src/main/resources/gui/fxml/AllProducts.fxml
+++ b/src/main/resources/gui/fxml/AllProducts.fxml
@@ -34,7 +34,7 @@
             <CheckBox fx:id="offCheckBox" mnemonicParsing="false" onAction="#reload" text="Show Offs" />
             <Label text="price" />
             <ComboBox fx:id="sortDirectionComboBox" onAction="#reload" prefHeight="39.0" prefWidth="241.0" />
-            <ComboBox fx:id="sortFieldComBowBox" onAction="#reload" prefHeight="39.0" prefWidth="243.0" />
+            <ComboBox fx:id="sortFieldComboBox" onAction="#reload" prefHeight="39.0" prefWidth="243.0" />
             <fx:include fx:id="categoryList" source="CategoryList.fxml" />
          </children>
       </VBox>
