--- a/src/main/resources/gui/fxml/CategoryList.fxml
+++ b/src/main/resources/gui/fxml/CategoryList.fxml
@@ -17,7 +17,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </VBox.margin>
       </Label>
-      <Button mnemonicParsing="false" onAction="#goToParent" prefHeight="26.0" prefWidth="249.0" text="Go To Parent Category" />
+      <Button fx:id="goToParentButton" mnemonicParsing="false" onAction="#goToParent" prefHeight="26.0" prefWidth="249.0" text="Go To Parent Category" />
       <ListView fx:id="categoryList" minWidth="100.0" />
    </children>
 </VBox>
