--- a/src/main/resources/gui/fxml/ComparePane.fxml
+++ b/src/main/resources/gui/fxml/ComparePane.fxml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <VBox prefHeight="450.0" prefWidth="100.0" spacing="10.0">
-         <children>
-            <Region prefHeight="240.0" prefWidth="200.0" />
-            <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
-            <TextField text="Brand" />
-            <TextField text="Description" />
-            <TextField text="Price" />
-            <TextField text="Rate" />
-            <TextField text="Features" />
-         </children>
-         <HBox.margin>
-            <Insets bottom="3.0" />
-         </HBox.margin>
-      </VBox>
-      <ScrollPane fx:id="scrollPaneForCompare" prefHeight="453.0" prefWidth="503.0">
-         <content>
-            <HBox fx:id="box" alignment="CENTER_LEFT" />
-         </content></ScrollPane>
-   </children>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.ComparePane">
+    <children>
+        <VBox alignment="TOP_CENTER" prefHeight="450.0" prefWidth="100.0" spacing="10.0">
+            <children>
+            <Button fx:id="exitButton" mnemonicParsing="false" text="EXIT" />
+                <Region prefHeight="240.0" prefWidth="200.0" />
+                <TextField prefHeight="25.0" prefWidth="84.0" text="Name" />
+                <TextField text="Brand" />
+                <TextField text="Description" />
+                <TextField text="Price" />
+                <TextField text="Rate" />
+                <TextField text="Features" />
+            </children>
+            <HBox.margin>
+                <Insets bottom="3.0" />
+            </HBox.margin>
+        </VBox>
+        <ScrollPane fx:id="scrollPaneForCompare" prefHeight="453.0" prefWidth="503.0">
+            <content>
+                <HBox fx:id="box" alignment="CENTER_LEFT" />
+            </content>
+        </ScrollPane>
+    </children>
 </HBox>
