--- a/src/main/resources/gui/fxml/ErrorPage.fxml
+++ b/src/main/resources/gui/fxml/ErrorPage.fxml
@@ -11,8 +11,8 @@
    <bottom>
       <AnchorPane prefHeight="238.0" prefWidth="630.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" style="-fx-border-radius: 2000;" text="Button" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="154.0" AnchorPane.rightAnchor="154.0" AnchorPane.topAnchor="168.0" />
-            <TextField fx:id="errorMessage" alignment="CENTER" layoutX="175.0" layoutY="6.0" prefHeight="94.0" prefWidth="259.0" stylesheets="@../styleSheet/ErrorPage.css" text="Ab kir bezan be mola">
+            <Button fx:id="okButton" layoutX="154.0" layoutY="168.0" mnemonicParsing="false" prefHeight="56.0" prefWidth="322.0" style="-fx-border-radius: 2000;" text="Ok" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="154.0" AnchorPane.rightAnchor="154.0" AnchorPane.topAnchor="168.0" />
+            <TextField fx:id="errorMessage" alignment="CENTER" layoutX="175.0" layoutY="6.0" prefHeight="94.0" prefWidth="259.0" text="">
                <font>
                   <Font size="18.0" />
                </font>
