--- a/src/main/resources/gui/fxml/ProductSeller.fxml
+++ b/src/main/resources/gui/fxml/ProductSeller.fxml
@@ -66,7 +66,7 @@
                         <Insets left="60.0" right="60.0" />
                      </VBox.margin>
                   </TextField>
-                  <Button fx:id="addToCart" mnemonicParsing="false" prefHeight="39.0" prefWidth="129.0" text="add to cart">
+                  <Button fx:id="addToCart" mnemonicParsing="false" onAction="#handleAdd" prefHeight="39.0" prefWidth="129.0" text="add To Cart">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
